--- a/jqueryGridAndEcharts/src/main/resources/db.properties
+++ b/jqueryGridAndEcharts/src/main/resources/db.properties
@@ -2,3 +2,9 @@ user=root
 password=131412
 driverClassName=com.mysql.jdbc.Driver
 jdbcUrl=jdbc:mysql://139.196.125.230:3306/mytest1?allowMultiQueries=true&characterEncoding=UTF-8
+
+
+oracle_user=root
+oracle_password=131412
+oracle_driverClassName=com.mysql.jdbc.Driver
+oracle_jdbcUrl=jdbc:mysql://139.196.125.230:3306/mytest1?allowMultiQueries=true&characterEncoding=UTF-8
